# overturn

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: db-init.sql
docs/superpowers/plans/: 2026-07-06-react-workbench.md  2026-07-08-server-phase1.md  (+6 more)
frontend/: app.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.app.config.ts  vite.config.ts
frontend/e2e/: generate.spec.ts  mobile.spec.ts  server.spec.ts
frontend/scripts/: finalize-app.mjs  install-template.mjs
frontend/src/: App.tsx  data.ts  main.tsx  styles.css  types.ts  vitest.setup.ts
overturn/: __init__.py  cli.py  dryrun.py  pipeline.py  render.py  report.py  sinks.py
overturn/templates/: workbench.html
server/: app.py  config.py  crypto.py  db.py  demo.py  ingest.py  models.py  payloads.py  security.py  seed.py  sinks.py  worker.py
server/api/: admin.py  auth.py  claims.py  demo.py  deps.py  invites.py  org.py  runs.py
server/migrations/: env.py
tests/: conftest.py  test_cli.py  test_demo.py  test_pipeline.py  test_render.py  test_report.py  test_sinks.py  test_summary.py
tests/server/: conftest.py  test_admin_api.py  test_app_config.py  test_auth.py  test_claims_api.py  test_crypto.py  test_csv_mappings_api.py  test_db.py  test_demo.py  test_dismiss.py  test_generate.py  test_ingest.py  test_invites.py  test_isolation.py  test_models.py  test_org_api.py  test_runs_api.py  test_sinks.py  test_tenancy_deps.py  test_upload_mapping.py  test_worker.py
(+64 files in other folders)
