[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overturn"
version = "0.1.0"
description = "Provider-side denial management CLI on top of healthflow-agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "healthflow-agents @ git+https://github.com/saikamara59/healthflow-agents@v0.3.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
overturn = "overturn.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
