[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overturn"
version = "0.1.0"
description = "Provider-side denial management CLI on top of healthflow-agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "healthflow-agents @ git+https://github.com/saikamara59/healthflow-agents@v0.3.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.scripts]
overturn = "overturn.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
